Remove overflow scrolling as it breaks the dropdowns - to be fixed

--- a/src/Assets/css/ascentcreative-cms-admin.css
+++ b/src/Assets/css/ascentcreative-cms-admin.css
@@ -127,7 +127,7 @@ A.settings-link:hover {
 
 .cms-screenblock .cms-tablewrap {
     width: 100%;
-    overflow-x: scroll;
+    /* overflow-x: scroll; */
 }
 
 .cms-screenblock-tabs .tab-pane {
